<resources>
    <string name="app_name">Plant a Seed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="plants">Plants</string>
    <string name="info">Info</string>
    <string name="title">Plant a Seed</string>
    <string name="plant_image">Plant image</string>
    <string name="take_photo">Take Photo</string>
    <string name="optional">optional:</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="scientific_name">Scientific name</string>
    <string name="title_activity_auth">AuthActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="plant_a_seed">Plant a seed</string>
    <string name="log_out">Log out</string>
    <string name="filler_image">Filler image</string>
    <string name="name">Name</string>
    <string name="welcome">Welcome!</string>
    <string name="description">Description</string>
    <string name="remove_plant">Remove Plant</string>
    <string name="settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="don_t_show_dialogue_warnings">Don\'t show dialogue warnings</string>
    <string name="don_t_show_this_message_again">Don\'t show this message again</string>
    <string name="the_photo_of_plants">the photo of plants</string>
    <string name="delete_button_for_photo">delete button for photo</string>
</resources>