<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">
    
        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:scaleType="centerCrop"
            android:id="@+id/plantImage"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/plant_image" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/plantName"
            android:text="@string/name"
            android:textSize="22sp"
            android:textColor="#000"
            android:textStyle ="bold"
            android:layout_toRightOf="@id/plantImage"
            android:layout_toEndOf="@id/plantImage"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/plantDescription"
            android:text="@string/description"
            android:textSize="18sp"
            android:textColor="#a9a9a9"
            android:layout_toRightOf="@id/plantImage"
            android:layout_toEndOf="@id/plantImage"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_below="@id/plantName"/>
        <ImageButton
            android:id="@+id/deletePlant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="#0000"
            android:layout_alignParentRight="true"
            android:src="@drawable/cancel_button"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/remove_plant"

            />

    </RelativeLayout>
</androidx.cardview.widget.CardView>